API変更の反映
