# server/simple_item_manager/models/usage.py
@@ -1,0 +1,178 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from simple_item_manager.models.base_model_ import Model
+from simple_item_manager import util
+
+
+class Usage(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id=None, user_id=None, start_at=None, end_at=None, items=None):  # noqa: E501
+        """Usage - a model defined in OpenAPI
+
+        :param id: The id of this Usage.  # noqa: E501
+        :type id: int
+        :param user_id: The user_id of this Usage.  # noqa: E501
+        :type user_id: int
+        :param start_at: The start_at of this Usage.  # noqa: E501
+        :type start_at: datetime
+        :param end_at: The end_at of this Usage.  # noqa: E501
+        :type end_at: datetime
+        :param items: The items of this Usage.  # noqa: E501
+        :type items: List[int]
+        """
+        self.openapi_types = {
+            'id': int,
+            'user_id': int,
+            'start_at': datetime,
+            'end_at': datetime,
+            'items': List[int]
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'user_id': 'userId',
+            'start_at': 'startAt',
+            'end_at': 'endAt',
+            'items': 'items'
+        }
+
+        self._id = id
+        self._user_id = user_id
+        self._start_at = start_at
+        self._end_at = end_at
+        self._items = items
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Usage':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Usage of this Usage.  # noqa: E501
+        :rtype: Usage
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self):
+        """Gets the id of this Usage.
+
+        使用状況ID  # noqa: E501
+
+        :return: The id of this Usage.
+        :rtype: int
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id):
+        """Sets the id of this Usage.
+
+        使用状況ID  # noqa: E501
+
+        :param id: The id of this Usage.
+        :type id: int
+        """
+
+        self._id = id
+
+    @property
+    def user_id(self):
+        """Gets the user_id of this Usage.
+
+        使用者ユーザID  # noqa: E501
+
+        :return: The user_id of this Usage.
+        :rtype: int
+        """
+        return self._user_id
+
+    @user_id.setter
+    def user_id(self, user_id):
+        """Sets the user_id of this Usage.
+
+        使用者ユーザID  # noqa: E501
+
+        :param user_id: The user_id of this Usage.
+        :type user_id: int
+        """
+
+        self._user_id = user_id
+
+    @property
+    def start_at(self):
+        """Gets the start_at of this Usage.
+
+        使用開始日時  # noqa: E501
+
+        :return: The start_at of this Usage.
+        :rtype: datetime
+        """
+        return self._start_at
+
+    @start_at.setter
+    def start_at(self, start_at):
+        """Sets the start_at of this Usage.
+
+        使用開始日時  # noqa: E501
+
+        :param start_at: The start_at of this Usage.
+        :type start_at: datetime
+        """
+
+        self._start_at = start_at
+
+    @property
+    def end_at(self):
+        """Gets the end_at of this Usage.
+
+        使用終了日時  # noqa: E501
+
+        :return: The end_at of this Usage.
+        :rtype: datetime
+        """
+        return self._end_at
+
+    @end_at.setter
+    def end_at(self, end_at):
+        """Sets the end_at of this Usage.
+
+        使用終了日時  # noqa: E501
+
+        :param end_at: The end_at of this Usage.
+        :type end_at: datetime
+        """
+
+        self._end_at = end_at
+
+    @property
+    def items(self):
+        """Gets the items of this Usage.
+
+        物品ID一覧  # noqa: E501
+
+        :return: The items of this Usage.
+        :rtype: List[int]
+        """
+        return self._items
+
+    @items.setter
+    def items(self, items):
+        """Sets the items of this Usage.
+
+        物品ID一覧  # noqa: E501
+
+        :param items: The items of this Usage.
+        :type items: List[int]
+        """
+
+        self._items = items
